--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
@@ -18,7 +19,7 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "3.3.2",
     "tailwindcss-react-native": "^1.7.10",
     "twrnc": "^3.6.7",
     "yarn": "^1.22.21"
